# sBeHappy

./: CMakeLists.txt  Dockerfile  README.md  application-setting.json  docker-compose.yml  todo.md
client/: index.html
client/css/: style.css
client/js/: script.js
postgres/: Dockerfile  init.sql
src/: CMakeLists.txt  application.cpp  application.h  authorization_service.h  database.h  main.cpp  response_manager.h  tcp_server.cpp  tcp_server.h
src/app/: application.cpp  application.h  main.cpp
src/include/core/: authorization_service  boost_include  database  http_router  https_server  json_manager  marketplace  response_manager  tcp_server  utils
src/modules/: CMakeLists.txt
src/modules/authorization_service_module/: authorization_service.cpp  authorization_service.h  jwt_manager.h  password_manager.cpp  password_manager.h  role_manager.h
src/modules/database_module/: database.h
src/modules/http_router_module/: http_router.h
src/modules/https_server_module/: https_server.cpp  https_server.h  response_manager.h
src/modules/json_manager_module/: json_manager.h
src/modules/marketplace_module/: marketplace.h
src/modules/response_manager_module/: response_manager.h
src/modules/tcp_server_module/: response_manager.h  tcp_server.cpp  tcp_server.h
src/modules/utils_module/: utils.cpp  utils.h
tests/: CMakeLists.txt  README.md
